--- a/博源国际娱乐代理-平台总代.html
+++ b/博源国际娱乐代理-平台总代.html
@@ -41,7 +41,7 @@ License:      MIT
 AutoMapper
 ---------------------------------------------
 WebSite:      http://www.automapper.org
-Copyright:    Copyright © 2008-2018 Jimmy Bogard and other contributors
+Copyright:    Copyright Â© 2008-2018 Jimmy Bogard and other contributors
 License:      MIT
 
 
@@ -83,7 +83,7 @@ License:      Apache License 2.0 (Apache)
 EPPlus
 ---------------------------------------------
 Website:      https://github.com/JanKallman/EPPlus
-Copyright:    Copyright (C) 2011  Jan Källman
+Copyright:    Copyright (C) 2011  Jan KÃ¤llman
 License:      GNU Library General Public License (LGPL)
 
 
@@ -212,7 +212,7 @@ License:      Apache License v2.0
 ua_parser
 ---------------------------------------------
 Website:      https://github.com/ua-parser/uap-csharp
-Copyright:    Copyright 2012 Søren Enemærke
+Copyright:    Copyright 2012 SÃ¸ren EnemÃ¦rke
 License:      Apache License v2.0
 
 
